# pyxgui

./: .editorconfig  .gitignore  LICENSE  README.md  build.sh  main.py  pylintrc  pyproject.toml  requirements.txt  test.xml
pyxgui/: __init__.py  __main__.py  art.txt
pyxgui/cli/: load_art.py
pyxgui/lang/lib/: error.py  lexer.py  parser.py  position.py  token.py
pyxgui/lang/xml/: attrib.py  lexer.py  node.py  parser.py
pyxgui/lib/: ansi_colors.py
pyxgui/renderer/: flex.py  font_handler.py  rect.py  text.py  widget.py  window.py
pyxgui/utils/: colors.py  errors.py
pyxgui/wtree_gen/: constants.py  error.py  lexer_base.py  parser_base.py  structs.py  xml_lexer.py  xml_parser.py  xml_to_widget.py
pyxgui/wtree_gen/widgets/: text.py  widget.py
pyxgui/xml_parser/: __init__.py  __xmlparser.py  constants.py  errors.py  lexer.py  position.py  structs.py  xml_parser.py  xmldoc.py  xmlnode.py  xmlparser.py
tests/: xml_test.py
