[tool.poetry]
name = "pyxgui"
version = "0.1.0"
description = ""
authors = ["AzracStudios <azracstudios@gmail.com>"]
license = "MIT" 
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
argparse = "^1.4.0"

[tool.poetry.scripts]
dev = "pyxgui:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
mypy = "^1.9.0"
pyink = "^24.3.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--no-header -v" 

testpaths = [
    "tests",
]
pythonpath=".venv"


[tool.pyink]
pyink-indentation=2

[tool.mypy]
# Disallow dynamic typing
disallow_any_unimported = true
disallow_any_expr = true
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_explicit = true
disallow_subclassing_any = true

# Disallow untyped definitions and calls
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

# None and optional handling
no_implicit_optional = true

# Configuring warnings
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_redundant_casts = true

# Misc things
strict_equality = true
strict = true

# Config file
warn_unused_configs = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
